Fix MailChimp link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,10 +5,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
         <div class="container">
             <a class="navbar-brand" href="#"><strong>· S · U · T · L ·</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+            </button> -->
+            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent-7"> -->
                 <!-- <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">About</a>
@@ -20,8 +20,8 @@
                         <a class="nav-link" href="#">Partnerships</a>
                     </li>
                 </ul> -->
-                <a class="btn blue-gradient btn-sm ml-auto"><i class="fa fa-envelope" aria-hidden="true"></i> STAY UPDATED</a>
-            </div>
+                <a href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank" class="btn blue-gradient btn-sm ml-auto"><i class="fa fa-envelope" aria-hidden="true"></i> STAY UPDATED</a>
+            <!-- </div> -->
         </div>
     </nav>
 
