Add images to cards

--- a/_includes/home/focus-areas.html
+++ b/_includes/home/focus-areas.html
@@ -9,10 +9,10 @@
   <div class="row">
     <div class="col-sm">
     <!--Card-->
-      <div class="card mb-4">
+      <div class="card card-image mb-4" style="background-image: url(/img/focus-areas/mobility.jpg);">
 
           <!--Card content-->
-          <div class="card-body">
+          <div class="card-body text-white rgba-orange-strong">
               <!--Title-->
               <h4 class="card-title">Mobility</h4>
               <!--Text-->
@@ -23,10 +23,10 @@
     </div>
     <!--/.Card-->
     <div class="col-sm">
-      <div class="card mb-4">
+      <div class="card card-image mb-4" style="background-image: url(/img/focus-areas/clean-tech.jpg);">
 
           <!--Card content-->
-          <div class="card-body">
+          <div class="card-body text-white rgba-green-strong">
               <!--Title-->
               <h4 class="card-title">Clean Tech and Sustainability</h4>
               <!--Text-->
@@ -42,10 +42,10 @@
   <div class="row">
     <div class="col-sm">
     <!--Card-->
-      <div class="card mb-4">
+      <div class="card card-image mb-4" style="background-image: url(/img/focus-areas/health.jpg);">
 
           <!--Card content-->
-          <div class="card-body">
+          <div class="card-body text-white rgba-blue-strong">
               <!--Title-->
               <h4 class="card-title">Health IT and Life Sciences</h4>
               <!--Text-->
@@ -56,10 +56,10 @@
     </div>
     <!--/.Card-->
     <div class="col-sm">
-      <div class="card mb-4">
+      <div class="card card-image mb-4" style="background-image: url(/img/focus-areas/food.jpg);">
 
           <!--Card content-->
-          <div class="card-body">
+          <div class="card-body text-white rgba-brown-strong">
               <!--Title-->
               <h4 class="card-title">Food Systems</h4>
               <!--Text-->
@@ -75,10 +75,10 @@
   <div class="row">
     <div class="col-sm">
     <!--Card-->
-      <div class="card mb-4">
+      <div class="card card-image mb-4" style="background-image: url(/img/focus-areas/iot-cyber.jpg);">
 
           <!--Card content-->
-          <div class="card-body">
+          <div class="card-body text-white rgba-red-strong">
               <!--Title-->
               <h4 class="card-title">Internet of Things (IoT) and Cybersecurity</h4>
               <!--Text-->
@@ -89,10 +89,10 @@
     </div>
     <!--/.Card-->
     <div class="col-sm">
-      <div class="card mb-4">
+      <div class="card card-image mb-4" style="background-image: url(/img/focus-areas/gov-tech.jpg);">
 
           <!--Card content-->
-          <div class="card-body">
+          <div class="card-body text-white rgba-grey-strong">
               <!--Title-->
               <h4 class="card-title">Gov Tech and Civic Tech</h4>
               <!--Text-->
@@ -108,10 +108,10 @@
   <div class="row">
     <div class="col-sm">
     <!--Card-->
-      <div class="card mb-4">
+      <div class="card card-image mb-4" style="background-image: url(/img/focus-areas/workforce.jpg);">
 
           <!--Card content-->
-          <div class="card-body">
+          <div class="card-body text-white rgba-indigo-strong">
               <!--Title-->
               <h4 class="card-title">Workforce Development</h4>
               <!--Text-->
