--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -8,8 +8,8 @@
                       <h1 class="h1-reponsive white-text font-up font-bold mb-3 wow fadeInDown" data-wow-delay="0.3s"><strong>Sacramento<br>Urban<br>Technology<br>Lab</strong></h1>
                       <hr class="hr-light mt-4 wow fadeInDown" align="left" data-wow-delay="0.4s">
                       <h5 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Accelerating quality of life improvements for all Sacramentans through data-driven testing and experimentation</strong></h5>
-                      <!-- <a class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-book" aria-hidden="true"></i> Learn More</a> -->
                       <a href="https://www.facebook.com/groups/sacurbantech/" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-comments" aria-hidden="true"></i> Join the Conversation</a>
+                      <a href="https://cityofsac.forms.fm/sutl" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-rocket" aria-hidden="true"></i> Partner with Us</a>
                   </div>
               </div>
           </div>
