Update nav links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,15 +9,17 @@
 
             <!--First column-->
             <div class="col-md-12">
-
                 <div class="footer-socials mb-5 flex-center">
 
-                    <!--Facebook-->
-                    <a href="https://www.facebook.com/groups/sacurbantech/" target="_blank" class="icons-sm fb-ic"><i class="fa fa-facebook fa-lg white-text mr-md-4"> </i></a>
                     <!--Twitter-->
                     <a href="https://twitter.com/innovatesac" target="_blank" class="icons-sm tw-ic"><i class="fa fa-twitter fa-lg white-text mr-md-4"> </i></a>
                     <!--GitHub-->
-                    <a href="https://github.com/innovatesac" target="_blank" class="icons-sm pin-ic"><i class="fa fa-github fa-lg white-text"> </i></a>
+                    <a href="https://github.com/innovatesac" target="_blank" class="icons-sm pin-ic"><i class="fa fa-github fa-lg white-text mr-md-4"> </i></a>
+                    <!--Facebook-->
+                    <a href="https://www.facebook.com/groups/sacurbantech/" target="_blank" class="icons-sm fb-ic"><i class="fa fa-facebook fa-lg white-text mr-md-4"> </i></a>
+                    <!--Mailchimp-->
+                    <a href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank"><i class="fa fa-envelope fa-lg white-text mr-md-4" aria-hidden="true"></i></a>
+
                 </div>
             </div>
             <!--/First column-->
