--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,23 +5,33 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
         <div class="container">
             <a class="navbar-brand" href="#"><strong>· S · U · T · L ·</strong></a>
-            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button> -->
-            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent-7"> -->
-                <!-- <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">About</a>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Verticals</a>
+                        <a class="nav-link" href="#">Focus Areas</a>
+                    </li>
+                  </ul>
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://twitter.com/innovatesac" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Partnerships</a>
+                        <a class="nav-link" href="https://www.facebook.com/groups/sacurbantech/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </li>
-                </ul> -->
-                <a href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank" class="btn blue-gradient btn-sm ml-auto"><i class="fa fa-envelope" aria-hidden="true"></i> STAY UPDATED</a>
-            <!-- </div> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/innovatesac" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
