--- a/_includes/home/focus-areas.html
+++ b/_includes/home/focus-areas.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <!--Section heading-->
-  <h2 class="section-heading pt-4">Focus Areas</h2>
+  <h2 class="section-heading h1 pt-4">Focus Areas</h2>
   <!--Section description-->
   <p class="section-description lead grey-text">SUTL aims to bring awareness to current and future City initiatives as well as develop programming to support the growth of the following industry verticals in Sacramento:</p>
 
