--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,8 @@
 
     {% include home/focus-areas.html %}
 
+    {% include home/partnerships.html %}
+
     {% include footer.html %}
   </body>
 
