--- a/_includes/home/main.html
+++ b/_includes/home/main.html
@@ -3,7 +3,7 @@
 <section class="section feature-box">
 
     <!--Section heading-->
-    <h1 class="section-heading pt-4">A Living Lab</h1>
+    <h1 class="section-heading h1 pt-4">A Living Lab</h1>
     <!--Section description-->
     <p class="section-description lead grey-text">The Sacramento Urban Technology Lab (SUTL) is where government, academia and industry collaborate to transform Sacramento into that of a living laboratory for entrepreneurs, advanced technology businesses, and academic institutions to test, develop, and scale their ideas, products, and services.</p>
 
