--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,27 +9,27 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Focus Areas</a>
-                    </li>
-                  </ul>
-                  <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com/innovatesac" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/groups/sacurbantech/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/innovatesac" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                    </li>
+                <!-- <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link" href="/about">About</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Focus Areas</a>
+                  </li>
+                </ul> -->
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="https://twitter.com/innovatesac" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="https://www.facebook.com/groups/sacurbantech/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="https://github.com/innovatesac" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                  </li>
                 </ul>
             </div>
         </div>
