--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" class="full-height">
+---
+layout: default
+---
 
-<head>
-  {% include head.html %}
-  {% include analytics.html %}
-  {% seo %}
-</head>
+{% include home/main.html %}
 
-  <body>
-    {% include navbar.html %}
+{% include home/focus-areas.html %}
 
-    {% include home/main.html %}
-
-    {% include home/focus-areas.html %}
-
-    {% include home/partnerships.html %}
-
-    {% include footer.html %}
-  </body>
-
-</html>
+{% include home/partnerships.html %}
