Add focus area pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!--Footer-->
-<footer class="page-footer secondary-color center-on-small-only pt-0">
+<footer class="page-footer stylish-color center-on-small-only pt-0">
 
     <!--Footer Links-->
     <div class="container">
