--- a/_includes/home/main.html
+++ b/_includes/home/main.html
@@ -3,7 +3,7 @@
 <section class="section feature-box">
 
     <!--Section heading-->
-    <h1 class="section-heading h1 pt-4">A Living Lab</h1>
+    <h2 class="section-heading h1 pt-4">A Living Lab</h2>
     <!--Section description-->
     <p class="section-description lead grey-text">The Sacramento Urban Technology Lab (SUTL) is where government, academia and industry collaborate to transform Sacramento into that of a living laboratory for entrepreneurs, advanced technology businesses, and academic institutions to test, develop, and scale their ideas, products, and services.</p>
 
@@ -12,7 +12,7 @@
 
         <!--Grid column-->
         <div class="col-md-4 mb-r">
-            <i class="fa fa-bank purple-text"></i>
+            <i class="fa fa-bank indigo-text"></i>
             <h5 class="feature-title">Government</h5>
             <p class="grey-text">We're transforming the regulatory process at all levels of government to embrace emerging technologies.</p>
         </div>
@@ -20,7 +20,7 @@
 
         <!--Grid column-->
         <div class="col-md-4 mb-r">
-            <i class="fa fa-graduation-cap purple-text"></i>
+            <i class="fa fa-graduation-cap indigo-text"></i>
             <h5 class="feature-title">Academia</h5>
             <p class="grey-text">We're commercializing university research and connecting new talent with high-wage jobs.</p>
         </div>
@@ -28,7 +28,7 @@
 
         <!--Grid column-->
         <div class="col-md-4 mb-r">
-            <i class="fa fa-industry purple-text"></i>
+            <i class="fa fa-industry indigo-text"></i>
             <h5 class="feature-title">Industry</h5>
             <p class="grey-text">We're offering startups and other companies unprecedented access to a real-world testbed.</p>
         </div>
