--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,9 +2,11 @@
 <header>
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark stylish-color fixed-top scrolling-navbar">
         <div class="container">
-            <a class="navbar-brand" href="#"><strong>· S · U · T · L ·</strong></a>
+            <a class="navbar-brand" href="/">
+              <img src="/img/sutl-logo.svg" height="30" alt="· S · U · T · L ·">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
