--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,15 +11,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                <!-- <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link" href="/about">About</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Focus Areas</a>
-                  </li>
-                </ul> -->
                 <ul class="navbar-nav ml-auto">
+                  <!-- Dropdown -->
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
+                      <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="/about/sutl">SUTL</a>
+                          <a class="dropdown-item" href="/about/mayors-tech-council">Mayor's Tech Council</a>
+                      </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Focus Areas</a>
+                      <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                          {% for area in site.data.focus-areas %}
+                          <a class="dropdown-item" href="/focus-areas/{{ area.title | slugify }}"><i class="fa fa-{{ area.icon }}"></i> {{ area.title }}</a>
+                          {% endfor %}
+                      </div>
+                  </li>
                   <li class="nav-item">
                       <a class="nav-link" href="https://twitter.com/innovatesac" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                   </li>
