--- a/_includes/video/intro.html
+++ b/_includes/video/intro.html
@@ -19,7 +19,7 @@
           <div class="card-body">
             <h1 class="page-heading text-center py-4">{{ page.title }}</h1>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ page.youtube }}?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/{{ page.youtube }}?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
             <div class="excerpt">
               {{ content }}
