Button for next video
added button

--- a/_includes/video/intro.html
+++ b/_includes/video/intro.html
@@ -25,6 +25,10 @@
               {{ content }}
             </div>
 
+            <a href="/video/{{ page.button }}">
+              <button type="button" class="btn btn-indigo" style="display: block; margin: auto;">Next Video</button>
+            </a>
+
           </div>
           <!--Page content-->
         </div>
