--- a/_includes/video/intro.html
+++ b/_includes/video/intro.html
@@ -25,8 +25,8 @@
               {{ content }}
             </div>
 
-            <a href="/video/{{ page.button }}">
-              <button type="button" class="btn btn-indigo" style="display: block; margin: auto;">Next Video</button>
+            <a href="/video/{{ page.button }}" class="btn btn-indigo" style="display: block; margin: auto;" >
+              Next Video
             </a>
 
           </div>
