--- a/_includes/video/intro.html
+++ b/_includes/video/intro.html
@@ -25,7 +25,7 @@
               {{ content }}
             </div>
 
-            <a href="/video/{{ page.button }}" class="btn btn-indigo" style="display: block; margin: auto;" >
+            <a href="/video/{{ page.button }}" class="btn btn-outline-grey">
               Next Video
             </a>
 
