--- a/_includes/mayors-tech-council.html
+++ b/_includes/mayors-tech-council.html
@@ -5,16 +5,16 @@
   <div class="row">
     <div class="col-md-12">
 
-          <!--Featured image-->
-          <div class="cover-image">
-            <img src="/img/focus-areas/{{ page.title | slugify }}.jpg" alt="{{ page.title }}">
-            <div class="rgba-brown-strong">
+      <!--Featured image-->
+      <div class="cover-image">
+        <img src="/img/focus-areas/{{ page.title | slugify }}.jpg" alt="{{ page.title }}">
+        <div class="rgba-brown-strong">
 
           </div>
         </div>
 
           <!--Content area-->
-          <div class="card card-cascade wider reverse">
+          <div class="card card-cascade wider">
           <!--Page content-->
 
 
@@ -29,31 +29,44 @@
                 <div class="row">
                   {% for bio in site.data.mayors-tech-council %}
                   <div class="col-md-4 col-sm-6">
+            <!--Card Wider-->
+                <div class="card card-cascade wider">
 
-                      <div class="card">
-                        <div class="card-block">
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img src="/img/mayors-tech-council/{{bio.slug}}.jpg" class="img-fluid">
+                        <a href="/projects/{{ bio.slug }}">
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
+                    <!--/Card image-->
+
+                    <!--Card content-->
+                    <div class="card-body text-center">
+                        <!--Title-->
+                        <h4 class="black-text"><strong>{{ bio.full-name }}</strong></h4>
+                        <h5><i>{{ bio.title}}</i></h5>
+                        <h5 class="indigo-text"><strong>{{ bio.organization}}</strong></h5>
+
+                        <p class="black-text"> {{ bio.bio_short }} </p>
+
+
+                        <p class="float-right">
                           <a href="/projects/{{ bio.slug }}">
-                            <h4 class="card-title">{{ bio.full-name }}</h4>
+                            See Full <i class="fa fa-chevron-right"></i>
                           </a>
-                          <h6 class="card-subtitle mb-2 text-muted">{{ bio.title}}</h6>
-                        </div>
-                        <div class="card-block">
-                          <p class="card-text">
-                            {{ bio.bio_short }}
-                          </p>
-                          <p class="float-right">
-                            <a href="/projects/{{ bio.slug }}">
-                              See Full <i class="fa fa-chevron-right"></i>
-                            </a>
-                          </p>
-                        </div>
-                      </div>
+                        </p>
+
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+                <!--/.Card Wider-->
 
                   </div>
                   {% endfor %}
                 </div>
               </div>
-            </div>
 
           </div>
           <!--Page content-->
