--- a/_includes/mayors-tech-council.html
+++ b/_includes/mayors-tech-council.html
@@ -31,7 +31,7 @@
                     <!--Card image-->
                     <div class="view overlay">
                         <img src="/img/mayors-tech-council/{{bio.slug}}.png" class="img-fluid">
-                        <a href="/projects/{{ bio.slug }}">
+                        <a href="/mayors-tech-council/{{ bio.slug }}">
                             <div class="mask rgba-white-slight"></div>
                         </a>
                     </div>
@@ -48,7 +48,7 @@
                         <a class="btn btn-flat"></a>
 
                         <p class="float-right">
-                          <a class="btn btn-info btn-rounded">More</a>
+                          <a class="btn btn-info btn-rounded" href="/mayors-tech-council/{{ bio.slug }}">More</a>
                         </p>
 
                     </div>
