--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -7,7 +7,8 @@
                   <div>
                       <h1 class="h1-reponsive white-text font-up font-bold mb-3 wow fadeInDown" data-wow-delay="0.3s"><strong>Sacramento<br>Urban<br>Technology<br>Lab</strong></h1>
                       <hr class="hr-light mt-4 wow fadeInDown" align="left" data-wow-delay="0.4s">
-                      <h5 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Accelerating quality of life improvements for all Sacramentans through data-driven testing and experimentation</strong></h5>
+                      <h3 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><i>DISCOVER.LAUNCH.SCALE</i></h3>
+                      <h5 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Improving the life of all Sacramentans through data-driven testing and piloting of new technologies in real life communities and settings</strong></h5>
                       <a href="https://www.facebook.com/groups/sacurbantech/" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-comments" aria-hidden="true"></i> Join the Conversation</a>
                       <a href="https://cityofsac.forms.fm/sutl" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-rocket" aria-hidden="true"></i> Partner with Us</a>
                   </div>
