updated video pages

--- a/_includes/video/intro.html
+++ b/_includes/video/intro.html
@@ -7,7 +7,7 @@
 
           <!--Featured image-->
           <div class="cover-image">
-            <img src="/img/video/camera.jpg" alt="{{ page.title }}">
+            <img src="/img/video/{{page.photo}}.jpg" alt="camera.jpg">
             <div class="rgba-brown-strong">
 
           </div>
