RAILS Landing Page
callout button

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,6 +13,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                 <ul class="navbar-nav ml-auto">
                   <!-- Dropdown -->
+                  <a class="btn peach-gradient btn-rounded" href="/rails">2018 RAILS Program</a>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
                       <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
