--- a/_includes/rails/body.html
+++ b/_includes/rails/body.html
@@ -1,9 +1,9 @@
 <!-- Intro Section -->
 <div class="card-body">
   <!--Section heading-->
-  <h2 class="section-heading h1 mt-5"><strong>2018 RAILS Grant Program</strong></h2>
+  <h2 class="section-heading h2 mt-5"><strong>Overview</strong></h2>
   <!--Section description-->
-  <a href="https://rails.innovatesac.org/" class="text d-flex justify-content-end" ><h5>Review the full guidelines before applying</h5><span><i class="fa fa-chevron-right pl-2"></i></span></a>
+  <h5></h5>
 
   {{ content }}
 </div>
