--- a/_includes/rails/intro.html
+++ b/_includes/rails/intro.html
@@ -1,28 +1,26 @@
 <!-- Intro Section -->
-<div class="view hm-black-light jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(/img/sutl-bknd.jpg);">
-  <div class="full-bg-img">
+<div class="p-3 mb-2 bg-purple text-white" data-jarallax='{"speed": 0.2}' >
       <div class="container flex-center">
           <div class="row pt-5 mt-3">
               <div class="col-md-12">
                 <div class="container">
                   <!-- <h1 class="jumbotron-heading">{{ site.title }}</h1> -->
                   <div class="row">
-                    <div class="col-md-6 mx-auto">
+                    <div class="col-md-6 mx-auto text-center">
                       <div class="thumbnail">
-                      <img class="img-thumbnail" src="/img/rails-logo.png" style="background-color:white;">
-                      <p class="text-center">
+                      <img class="img-fluid mb-3 mb-md-0" src="/img/rails.png" style="background-color:white;">
+                      <!-- <p class="text-center">
                         <a href="" class="btn btn-primary">Begin Application</a>
                         <a href="https://github.com/innovatesac/2018-rails-guidelines/issues" class="btn btn-secondary">FAQ</a>
-                      </p>
+                      </p> -->
                     </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left pr-md-5">
-                      <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/DQX21UdEn9g?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      <p>The RAILS program offers up to $1 million in grants annually to support the development of Sacramento’s entrepreneurial and innovation ecosystem through “startup enablers” — community-based initiatives and programs that help entrepreneurs take their startup from initial idea to viable company. The grants will be offered in three categories - Acceleration, Innovation, and Leadership - each with their own funding range. Applications are due May 7, 2018, by 12:00pm.</p>
                     </div>
                   </div>
                 </div>
               </div>
           </div>
       </div>
-  </div>
 </div>
