--- a/_includes/rails/buttons.html
+++ b/_includes/rails/buttons.html
@@ -6,7 +6,7 @@
     <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/DQX21UdEn9g?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <!-- </div> -->
 
-  <p class="section-description lead grey-text">Learn more and apply today... Applications are due before 12pm on May 7th</p>
+  <p class="section-description lead grey-text"></p>
 
   <div class="row">
 
