--- a/_includes/rails/buttons.html
+++ b/_includes/rails/buttons.html
@@ -81,7 +81,7 @@
       <!--Card-->
       <div class="card card-image mb-4 view overlay hm-white-slight" style="background-image: url(/img/focus-areas/workforce-development.jpg);">
 
-      <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSc00-3O79R5CqqdSnx2i0gA93E1ToNlzgdIKaOmaApJLEXKrA/viewform?usp=sf_link"> -->
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSc00-3O79R5CqqdSnx2i0gA93E1ToNlzgdIKaOmaApJLEXKrA/viewform?usp=sf_link">
         <div class="mask"></div>
       </a>
 
