--- a/_includes/rails/buttons.html
+++ b/_includes/rails/buttons.html
@@ -15,7 +15,7 @@
       <!--Card-->
       <div class="card card-image mb-4 view overlay hm-white-slight" style="background-image: url(/img/focus-areas/internet-of-things-iot-and-cybersecurity.jpg);">
 
-      <a href="rails.innovatesac.org">
+      <a href="https://rails.innovatesac.org/">
         <div class="mask"></div>
       </a>
 
