Made mofie bio page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,7 @@
 
                           <a class="dropdown-item" href="/about/mayors-tech-council">Mayor's Tech Council</a>
                           <a class="dropdown-item" href="/video/innovation-city">Innovation Sacramento Series</a>
+                          <a class="dropdown-item" href="/mofie">Team Bios</a>
 
                       </div>
                   </li>
