--- a/_includes/mofie.html
+++ b/_includes/mofie.html
@@ -101,7 +101,15 @@
             </h3>
             <p>
                 <a class="font-weight-bold dark-grey-text">Bureaucracy Hacker</a></p>
-            <p class="grey-text">...coming soon...</p>
+            <p class="grey-text">Ash Roughani is Bureaucracy Hacker at the City of Sacramento Mayor’s Office for Innovation & 
+              Entrepreneurship (MOFIE) where he manages the Creative Economy Pilot Project, in addition to other initiatives. 
+              Ash is a systems thinker who synthesizes his deep knowledge of public policy and business strategy with technical 
+              skills in product management, web development, human centered design, and community building. Prior to his role at 
+              the City, Ash founded and launched several civic technology startups, including Public Innovation, Code for Sacramento, 
+              and Delivery Unit. He was formerly Senior Associate at California Forward, served as an Executive Fellow in the 
+              Schwarzenegger Administration. Ash holds a Master of Public Policy and Administration degree from Sacramento State, 
+              a BA in Philosophy from UC Santa Barbara, and completed half of the MBA program at the UC Davis Graduate School of 
+              Management.</p>
 
             <a class="btn btn-primary btn-md" href="https://twitter.com/roughani"><i class="fa fa-twitter"></i> @roughani</a>
         </div>
