--- a/_includes/rails/buttons.html
+++ b/_includes/rails/buttons.html
@@ -46,7 +46,7 @@
               <!--Icon-->
               <h1><i class="fa fa-question-circle"></i></h1>
               <!--Title-->
-              <h2 class="card-title h1">FAQs</h2>
+              <h2 class="card-title h1">Q&A</h2>
           </div>
 
       </div>
