--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,6 +22,7 @@
                           <a class="dropdown-item" href="/about/mayors-tech-council">Mayor's Tech Council</a>
                           <a class="dropdown-item" href="/video/innovation-city">Innovation Sacramento Series</a>
                           <a class="dropdown-item" href="/mofie">Team Bios</a>
+                          <a class="dropdown-item" href="https://innovatesac.gitbook.io/goals-objectives/">Goals & Objectives</a>
 
                       </div>
                   </li>
