Added photos to site

--- a/_includes/focus-areas/health-it-life-sciences.html
+++ b/_includes/focus-areas/health-it-life-sciences.html
@@ -3,8 +3,27 @@
 <!--Section: Products v.5-->
 <section class="text-center pb-3 my-5">
   <!--Section heading-->
-  <h1 class="h1 py-5">Aggie Square</h1>
-  <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/AO7XbqI6xCg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <div class="container">
+    <!-- <h1 class="jumbotron-heading">{{ site.title }}</h1> -->
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/AO7XbqI6xCg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <p class="text-center">
+          <a href="/pdf/aggie-squre.pdf" class="btn btn-primary">View Working Group Report</a>
+        </p>
+      </div>
+      <div class="col-md-6 text-center text-md-left pr-md-5">
+        <h1 class="h1 py-5 text-center">Aggie Square</h1>
+        <p class="text-center">
+          Aggie Square will serve as a collaborative technology and innovation campus that leverages the university's strengths to become the catalyst
+          for economic change, creates jobs for its graduates, and hleps spur the economic vitality of the broader Sacramento region. It will serve
+          as a model public-private partnership, increasing technology transfer and creating equitable opportunities for residents in the community and
+          region.
+        </p>
+      </div>
+    </div>
+  </div>
+
   <!--Carousel Wrapper-->
   <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
     <!--Controls-->
@@ -33,7 +52,7 @@
           <div class="card card-cascade narrower card-ecommerce">
             <!--Card image-->
             <div class="view overlay">
-              <img src="http://bit.ly/2HFcmZI" class="img-fluid" alt="sample photo">
+              <img src="/img/uc-davis/as-logo.jpg" class="img-fluid" alt="sample photo">
               <a>
                 <div class="mask waves-effect waves-light"></div>
               </a>
@@ -44,14 +63,14 @@
               <!--Category & Title-->
               <h4 class="card-title my-4">
                 <strong>
-                  <a href="http://bit.ly/2HFcmZI">Aggie Square Logo</a>
+                  <a href="/img/uc-davis/as-logo.jpg">Aggie Square Logo</a>
                 </strong>
               </h4>
               <!--Description-->
               <p class="card-text-black"></p>
               <div class="card-footer">
                 <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="http://bit.ly/2HFcmZI">
+                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/as-logo.jpg">
                       <i class="fa fa-expand ml-3"></i>
                     </a></span>
               </div>
@@ -63,7 +82,7 @@
           <div class="card card-cascade narrower card-ecommerce">
             <!--Card image-->
             <div class="view overlay">
-              <img src="http://bit.ly/2JQgiYg" class="img-fluid" alt="sample photo">
+              <img src="/img/uc-davis/context-dwntwn.jpg" class="img-fluid" alt="sample photo">
               <a>
                 <div class="mask waves-effect waves-light"></div>
               </a>
@@ -74,7 +93,7 @@
               <!--Category & Title-->
               <h4 class="card-title my-4">
                 <strong>
-                  <a href="http://bit.ly/2JQgiYg">UC Davis Health</a>
+                  <a href="/img/uc-davis/context-dwntwn.jpg">UC Davis Health</a>
                 </strong>
               </h4>
               <!--Description-->
@@ -83,7 +102,7 @@
               <!--Card footer-->
               <div class="card-footer">
                 <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="http://bit.ly/2JQgiYg">
+                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/context-dwntwn.jpg">
                       <i class="fa fa-expand ml-3"></i>
                     </a></span>
               </div>
@@ -94,7 +113,7 @@
           <div class="card card-cascade narrower card-ecommerce">
             <!--Card image-->
             <div class="view overlay">
-              <img src="http://bit.ly/2HnYpSv" class="img-fluid" alt="sample photo">
+              <img src="/img/uc-davis/context-map.jpg" class="img-fluid" alt="sample photo">
               <a>
                 <div class="mask waves-effect waves-light"></div>
               </a>
@@ -105,7 +124,7 @@
               <!--Category & Title-->
               <h4 class="card-title my-4">
                 <strong>
-                  <a href="http://bit.ly/2HnYpSv">Aggie Square Proposed Area</a>
+                  <a href="/img/uc-davis/context-map.jpg">Aggie Square Proposed Area</a>
                 </strong>
               </h4>
               <!--Description-->
@@ -114,7 +133,7 @@
               <!--Card footer-->
               <div class="card-footer">
                 <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="http://bit.ly/2HnYpSv">
+                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/context-map.jpg">
                       <i class="fa fa-expand ml-3"></i>
                     </a></span>
               </div>
@@ -129,7 +148,7 @@
           <div class="card card-cascade narrower card-ecommerce">
             <!--Card image-->
             <div class="view overlay">
-              <img src="http://bit.ly/2qC2JTA" class="img-fluid" alt="sample photo">
+              <img src="/img/uc-davis/baseplan.jpg" class="img-fluid" alt="sample photo">
               <a>
                 <div class="mask waves-effect waves-light"></div>
               </a>
@@ -140,7 +159,7 @@
               <!--Category & Title-->
               <h4 class="card-title my-4">
                 <strong>
-                  <a href="http://bit.ly/2qC2JTA">Aggie Square Proposed Layout</a>
+                  <a href="/img/uc-davis/baseplan.jpg">Aggie Square Proposed Layout</a>
                 </strong>
               </h4>
               <!--Description-->
@@ -149,7 +168,7 @@
               <!--Card footer-->
               <div class="card-footer">
                 <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="http://bit.ly/2qC2JTA">
+                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/baseplan.jpg">
                       <i class="fa fa-expand ml-3"></i>
                     </a></span>
               </div>
@@ -160,7 +179,7 @@
             <div class="card card-cascade narrower card-ecommerce">
               <!--Card image-->
               <div class="view overlay">
-                <img src="http://bit.ly/2vjxu5z" class="img-fluid" alt="sample photo">
+                <img src="/img/uc-davis/baseplan-labels.jpg" class="img-fluid" alt="sample photo">
                 <a>
                   <div class="mask waves-effect waves-light"></div>
                 </a>
@@ -171,7 +190,7 @@
                 <!--Category & Title-->
                 <h4 class="card-title my-4">
                   <strong>
-                    <a href="http://bit.ly/2vjxu5z">Aggie Square Proposed Layout (Labled)</a>
+                    <a href="/img/uc-davis/baseplan-labels.jpg">Aggie Square Proposed Layout (Labled)</a>
                   </strong>
                 </h4>
                 <!--Description-->
@@ -180,7 +199,7 @@
                 <!--Card footer-->
                 <div class="card-footer">
                   <span class="float-right">
-                    <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="http://bit.ly/2vjxu5z">
+                    <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/baseplan-labels.jpg">
                         <i class="fa fa-expand ml-3"></i>
                       </a></span>
                 </div>
@@ -191,7 +210,7 @@
             <div class="card card-cascade narrower card-ecommerce">
               <!--Card image-->
               <div class="view overlay">
-                <img src="http://bit.ly/2vk0vOr" class="img-fluid" alt="sample photo">
+                <img src="/img/uc-davis/birdseye.jpg" class="img-fluid" alt="sample photo">
                 <a>
                   <div class="mask waves-effect waves-light"></div>
                 </a>
@@ -202,7 +221,7 @@
                 <!--Category & Title-->
                 <h4 class="card-title my-4">
                   <strong>
-                    <a href="http://bit.ly/2vk0vOr">Aggie Square Bird's Eye View</a>
+                    <a href="/img/uc-davis/birdseye.jpg">Aggie Square Bird's Eye View</a>
                   </strong>
                 </h4>
                 <!--Description-->
@@ -211,7 +230,7 @@
                 <!--Card footer-->
                 <div class="card-footer">
                   <span class="float-right">
-                    <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="http://bit.ly/2vk0vOr">
+                    <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/birdseye.jpg">
                         <i class="fa fa-expand ml-3"></i>
                       </a></span>
                 </div>
